2025-08-22T12:52:32Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17155793474 # 1176
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-22
* notice: last 14d: unq all: 7 29
* notice: prev accum: outdated-unq outdated-all / unq all: 1165 5805 / 1184 5836
* notice: next accum: outdated-unq outdated-all / unq all: 1167 5807 / 1184 5836
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-08] / []

2025-08-22T02:01:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17143977477 # 1175
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-22
* notice: last 14d: unq all: 8 31
* notice: prev accum: outdated-unq outdated-all / unq all: 1165 5805 / 1184 5835
* notice: next accum: outdated-unq outdated-all / unq all: 1165 5805 / 1184 5836
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2025-08-21]

2025-08-21T12:53:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17127495344 # 1174
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-21
* notice: last 14d: unq all: 8 30
* notice: prev accum: outdated-unq outdated-all / unq all: 1164 5804 / 1183 5834
* notice: next accum: outdated-unq outdated-all / unq all: 1165 5805 / 1184 5835
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-07] / [2025-08-21]

2025-08-20T12:55:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17098990794 # 1172