@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-22T12:52:32Z",
-  "count_outdated" : 5807,
-  "uniques_outdated" : 1167,
+  "timestamp" : "2025-08-23T12:48:55Z",
+  "count_outdated" : 5808,
+  "uniques_outdated" : 1168,
   "count" : 5836,
   "uniques" : 1184,
   "views" : [
-    {
-      "timestamp": "2025-08-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-08-10T00:00:00Z",
       "count": 1,
