@@ -1,3 +1,12 @@
+2025-08-23T12:48:55Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17175645123 # 1178
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-23
+* notice: last 14d: unq all: 7 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 1167 5807 / 1184 5836
+* notice: next accum: outdated-unq outdated-all / unq all: 1168 5808 / 1184 5836
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-08-09] / []
+
 2025-08-22T12:52:32Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17155793474 # 1176
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-22
